Fix positioning of parallax, make connect button solid blue box in navbar

--- a/_data/general.yml
+++ b/_data/general.yml
@@ -178,7 +178,7 @@ items:
 
     media:
         heading: Media
-        subheading: Text
+        subheading: Check out our social media posts and follow us for more.
         news:
             heading: News
         social:
