--- a/_data/general.yml
+++ b/_data/general.yml
@@ -47,7 +47,7 @@ items:
         - "Aero Fleet One was born in 2013 when the founder, Mark Erjavec, met a UAS developer named 
         Yuri Pederii. At the time, Yuri was developing the AeroDrone DR-20, a smaller predecessor 
         to his current work with UAVITA. Mark saw potential in the unique fixed-wing, gas-powered 
-        drone technology as the pathway to making unmanned aircraft that would one day be able to 
+        drone technology as the pathway to making unmanned aircrafts that would one day be able to 
         accomplish the same tasks as manned aircraft. He bought a DR-20 as a way to support Yuri’s 
         work and kept up with the development team’s progress over the years."
         - "In this process, 
