--- a/_data/general.yml
+++ b/_data/general.yml
@@ -48,7 +48,7 @@ items:
         Yuri Pederii. At the time, Yuri was developing the AeroDrone DR-20, a smaller predecessor 
         to his current work with UAVITA. Mark saw potential in the unique fixed-wing, gas-powered 
         drone technology as the pathway to making unmanned aircrafts that would one day be able to 
-        accomplish the same tasks as manned aircraft. He bought a DR-20 as a way to support Yuri’s 
+        accomplish the same tasks as manned aircrafts. He bought a DR-20 as a way to support Yuri’s 
         work and kept up with the development team’s progress over the years."
         - "In this process, 
         he created Aero Fleet One, with a vision to someday have the world’s largest fleet of 
