Update path to image on about page

--- a/_data/general.yml
+++ b/_data/general.yml
@@ -69,8 +69,8 @@ items:
                 - Our team has begun the process of acquiring and partnering with aerial application businesses. We will be coming together with applicators across the country to share best practices and standardize communications for increased safety and efficiency. We will also continue to implement the best technologies available across our operations. We are here to help the agricultural aviation industry survive - and thrive - through the next waves of global demand and technological advancement.
 
         gallery:
-            src: /assets/img/fixed-wing-drone.jpg
-            alt: "Fixed Wing Drone"
+            src: /assets/img/team-aero-fleet-one-agricultural-aviation.jpeg
+            alt: "Aero Fleet One Team"
         purpose:
             heading: Our Purpose
             text: Our Purpose
