Fix typos in update

--- a/_data/general.yml
+++ b/_data/general.yml
@@ -92,7 +92,7 @@ items:
                   linkedin: https://www.linkedin.com/in/destiny-west-b9b7571b3/
                   latlong: [39.771370, -104.981852]
                   text: >
-                      A passion for aviation motivates Destiny as she enacts our ambitious business plan.. She is our main public voice,administrative organizer, and strategic fulcrum.
+                      A passion for aviation motivates Destiny as she enacts our ambitious business plan. She is our main public voice, administrative organizer, and strategic fulcrum.
                 - name: Greg Maud
                   active: True
                   title: Corporate Development
@@ -165,7 +165,7 @@ items:
                   linkedin: https://www.linkedin.com/in/matheus-raslan-a270941b4/
                   latlong: [53.349804, -6.260310]
                   text: >-
-                      Matheus uses his experience and training in digital media marketing to shape our brand and online presence.
+                      Matheus uses his experience and training in digital media marketing to shape our brand and online presence. He manages our content staff and press relations.
                 - name: Matthew Lessard
                   active: true
                   title: Strategic Advisor
