--- a/admin/config.yml
+++ b/admin/config.yml
@@ -11,5 +11,7 @@ collections:
       slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
       fields:
           - { label: "Title", name: "title", widget: "string" }
-          - { label: "Image", name: "img", widget: "image" }
+          - { label: "Image", name: "img", widget: "image", required: false }
           - { label: "Body", name: "content", widget: "markdown" }
+          - { label: "Tags", name: tags", widget: "list", allow_add: true }
+          - { label: "Publish Date", name: "date", widget: "datetime" }
